test/conformance/chainsaw/exceptions/exclude-image-reference/exception.yaml
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: pod-security-exception
spec:
  exceptions:
  - policyName: check-image
    ruleNames:
    - check-image-rule
  verifyImages:
  - imageReferences:
      - "*/nginx*"
  match:
    any:
    - resources:
        kinds:
          - Pod
