test/conformance/chainsaw/exceptions/exclude-image-reference/pod-allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test-pod
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
