test/conformance/chainsaw/exceptions/exclude-image-reference/pods-rejected.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-test-pod
  labels:
    app: nginx
spec:
  containers:
  - name: busybox
    image: busybox:latest
