test/conformance/chainsaw/exceptions/exclude-image-reference/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: exclude-image-references
spec:
  steps:
  - name: create policy
    use:
      template: ../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: check-image
  - name: apply exception
    try:
    - apply:
        file: exception.yaml
  - name: step-03
    try:
    - apply:
        file: pod-allowed.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pods-rejected.yaml
